feat: :sparkles: cadastra/autentica com o Github

--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -3,6 +3,7 @@
     "@rocketseat/eslint-config/node"
   ],
   "rules": {
+    "camelcase": "off",
     "no-console": "warn",
     "quotes": [
       "error",
